# mcintalmo.github.io

./: .env.example  .gitignore  .pre-commit-config.yaml  404.md  CNAME  LICENSE  README.md  _config.yaml  about.md  astro.config.mjs  credentials.md  eslint.config.js  eslint.config.mjs  index.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  resume.md  robots.txt  site-config.yaml  tsconfig.json
.archive/: biome.json
.github/: copilot-instructions.md
.github/instructions/: Typscript.instructions.md  python.instructions.md
.github/workflows/: auto-upgrade.yml  build-deploy.yml  deploy-frontend.yaml  eval.yml  resume.yml
.husky/: pre-commit
_data/: authors.yaml
_layouts/: resume.html
_posts/: 2024-05-22-hello-world.md
assets/css/: resume.css
backend/: Dockerfile  TESTING.md  pyproject.toml
backend/agent/: Dockerfile  pyproject.toml
backend/agent/src/agent/: config.py  main.py  portfolio_content.json  prompt.py  tools.py
backend/agent/tests/: golden_dataset.yaml  test_agent.py  test_agent_tools.py  test_await_result.py  test_evals.py  test_integration.py  test_native_tool_call.py  test_ttft_benchmark.py
backend/auth/: Dockerfile  pyproject.toml
backend/auth/src/auth/: main.py
backend/auth/tests/: test_auth.py
backend/common/: pyproject.toml
backend/common/src/common/: config.py  events.py
backend/mcp/: pyproject.toml
backend/mcp/src/portfolio_mcp/: Dockerfile  main.py
backend/mcp/tests/: test_mcp.py
backend/resume/: pyproject.toml
backend/resume/src/resume/: __init__.py  agent_context.py  build.py
backend/tailor/: pyproject.toml
backend/tailor/src/tailor/: __init__.py  cli.py  graph.py  nodes.py  schema.py  server.py
backend/tailor/tests/: test_graph.py  test_nodes.py
backend/tailor/tests/evals/: .dataset.json  __init__.py  generate_goldens.py  metrics.py  test_tailor.py
docs/: agent_instructions.md  architecture.md  development.md  testing.md
e2e/: README.md  pyproject.toml  report.html
e2e/pages/: base_page.py  spa_page.py
e2e/tests/: conftest.py  test_hero_interaction.py  test_interactive_capabilities.py  test_spa.py  test_text_modality.py
frontend/: astro.config.mjs  biome.json  env.production  package.json  tsconfig.json  vitest.config.ts
frontend/.astro/: content.d.ts  data-store.json  settings.json
frontend/public/: resume.json  resume.md  resume.yaml
frontend/src/: content.config.ts
frontend/src/components/: AgentController.tsx  BackToTop.tsx  Blog.tsx  ChatAgent.tsx  ClientOnly.tsx  Contact.tsx  CustomChatWidget.tsx  Education.tsx  EvalDashboard.tsx  HeroPrompt.tsx  Home.tsx  InteractivePortfolio.tsx  Markdown.tsx  Navigation.tsx  PortfolioSections.tsx  Projects.tsx  SectionAnchor.tsx  Skills.tsx  TelemetryPopoffs.tsx  ThemeProvider.tsx  VectorBackground.tsx  VoiceSandbox.tsx  Work.tsx
frontend/src/components/agents-ui/: agent-audio-visualizer-aura.tsx  agent-audio-visualizer-bar.tsx  agent-audio-visualizer-wave.tsx  agent-disconnect-button.tsx  agent-track-control.tsx  agent-track-toggle.tsx  react-shader-toy.tsx
frontend/src/components/figma/: ImageWithFallback.tsx
frontend/src/components/hooks/: useScrollAnimation.tsx  useTouchGestures.tsx
frontend/src/components/icons/: GitHub.tsx  LinkedIn.tsx
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  loading-skeleton.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  select.tsx  sheet.tsx  sidebar.tsx  slider.tsx  sonner.tsx  table.tsx  tabs.tsx  toggle-group.tsx  tooltip.tsx
frontend/src/content/: Positions_export.csv  Profile_export.csv  resume.yaml  site.config.yaml
frontend/src/content/tailored/: TestAiCompany.yaml  full.yaml
frontend/src/hooks/: useAgentEvents.test.ts  useAgentEvents.ts  usePortfolioNavigation.test.ts  usePortfolioNavigation.ts
frontend/src/layouts/: Layout.astro
frontend/src/lib/: data.ts  events.ts  mappers.ts  markdown.ts  themeStore.ts  types.ts
frontend/src/pages/: chat.astro  index.astro  robots.txt.ts
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
frontend/src/utils/: session.ts
infra/: Makefile  docker-compose.local.yaml  docker-compose.observability.yaml  docker-compose.yaml  litellm_config.yaml  livekit.yaml  setup.sh  update-ip.sh
infra/nginx/: portfolio.conf
infra/observability/otel/: otel-collector.yaml
infra/observability/prometheus/: alert.rules.yml  alertmanager.yml  prometheus.yaml
infra/terraform/: .terraform.lock.hcl  backend.tf  cloud-init.yaml  locals.tf  main.tf  outputs.tf  variables.tf
public/: CNAME
resume/: pdf-config.yaml  resume.yaml
resume-generator/: generate-resume.dates.test.ts  generate-resume.format.test.ts  generate-resume.test.ts  generate-resume.ts  pdf.config.yaml
resume-generator/output/: resume.html  resume.tex
resume-generator/templates/: resume_template.tex
resume/convert/: convert.mjs  package.json
resume/themes/classic/: design.yaml
src/components/: BackToTop.tsx  Blog.tsx  Contact.tsx  Education.tsx  Home.astro  Home.tsx  Markdown.tsx  Navigation.tsx  PortfolioSections.tsx  Projects.tsx  SectionAnchor.tsx  Skills.tsx  ThemeProvider.tsx  Work.tsx
src/components/hooks/: useScrollAnimation.tsx  useTouchGestures.tsx
src/components/ui/: loading-skeleton.tsx  progress.tsx  sheet.tsx
src/content/: resume.yaml  site.config.yaml
src/layouts/: Layout.astro
src/lib/: data.ts  mappers.ts  markdown.ts  types.ts
src/lib/schema/: resume.v1.json
src/pages/: index.astro  robots.txt.ts
src/styles/: globals.css
tools/: litellm_config.yaml
tools/linkedin_sync/: sync.py
tools/mcp_server/: pyproject.toml  server.py
tools/rag_agent/: agent.py  main.py  pyproject.toml  worker.py  wyoming_plugin.py
tools/tailor_resume/: agent.py  main.py  pyproject.toml  sample_jd.txt  tailor.py
tools/tailor_resume/tests/: test_tailor.py
(+8 files in other folders)
