[project]
name = "e2e"
version = "0.1.0"
description = "End-to-end testing framework"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest-html>=4.2.0",
    "pytest-playwright>=0.8.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
addopts = "--html=report.html --self-contained-html -v"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
exclude-newer = "7 days"
