[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "livekit-agents>=1.5.12",
    "livekit-plugins-openai>=1.5.12",
    "livekit-plugins-silero>=1.5.12",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-turn-detector>=1.5.12",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.14.1",
    "common",
]

[tool.uv.sources]
common = { workspace = true }
