[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "livekit-agents>=1.5.12",
    "livekit-plugins-openai>=1.5.12",
    "livekit-plugins-silero>=1.5.12",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-turn-detector>=1.5.12",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.14.1",
    "common",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-distro>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "opentelemetry-instrumentation-httpx>=0.60b1",
]

[tool.uv.sources]
common = { workspace = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
]
