[project]
name = "auth"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "common",
    "fastapi>=0.138.2",
    "livekit-api>=1.1.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-distro>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-httpx>=0.60b1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]

[tool.uv.sources]
common = { workspace = true }
