[project]
name = "resume"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "common",
    "pyyaml>=6.0.3",
    "rendercv[full]>=2.8",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resume"]
