[project]
name = "tailor"
version = "0.1.0"
description = "LangGraph pipeline for agentic resume tailoring"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "langgraph>=1.2.1",
    "langchain-openai>=1.2.2",
    "langchain-core>=1.4.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "resume",
    "websockets>=15.0.1",
]

[project.scripts]
tailor-cli = "tailor.cli:main"
tailor-api = "tailor.server:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tailor"]

[tool.uv.sources]
resume = { workspace = true }
