[project]
name = "tailor"
version = "0.1.0"
description = "LangGraph pipeline for agentic resume tailoring"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "pydantic-settings>=2.14.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "resume",
    "uvicorn>=0.49.0",
    "websockets>=15.0.1",
]

[project.scripts]
tailor-cli = "tailor.cli:main"
tailor-api = "tailor.server:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tailor"]

[tool.uv.sources]
resume = { workspace = true }
