[project]
name = "tailor-resume"
version = "0.1.0"
description = "Agentic workflows for tailoring a resume to a job description."
requires-python = ">=3.12"
dependencies = [
    "ag-ui-adk",
    "beautifulsoup4",
    "fastapi",
    "google-adk[extensions,a2a]",
    "a2a",
    "google-genai",
    "litellm",
    "pydantic",
    "pytest",
    "pyyaml",
    "requests",
    "uvicorn"
]

[tool.uv]
package = false
